src/test/resources/SemanticAnalysis/negative/WrongAnnotation1.ls
@weight(50)
class A {
  p("") {}
}
